test/kubernetes/e2e/features/csrf/testdata/csrf-gw.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: csrf-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  csrf:
    percentageEnabled: 100
    additionalOrigins:
    - exact: example.org
    - suffix: test.io
    - prefix: sample
